docs & test: Unit & integration tests for file-service, also add openapi description